Add Download EPUB and Hide/Show Library Chapters options to header menu

--- a/plugin/css/modals.css
+++ b/plugin/css/modals.css
@@ -538,3 +538,8 @@ body.modal-open {
 .library-mode .menu-item.library-only {
     display: flex;
 }
+
+/* Non-library menu items - visible by default, hidden in library mode */
+.library-mode .menu-item.non-library-only {
+    display: none;
+}
